--- a/lib/gulu.scss
+++ b/lib/gulu.scss
@@ -10,4 +10,13 @@
   "Noto Sans CJK SC", "Source Han Sans SC", "Source Han Sans CN",
   "Microsoft YaHei", "Wenquanyi Micro Hei", "WenQuanYi Zen Hei",
   "ST Heiti", SimHei, "WenQuanYi Zen Hei Sharp", sans-serif;
+
 }
+
+[class^="gulu-icon"], [class*="gulu-icon"] {
+  width: 1em; height: 1em;
+  vertical-align: -0.15em;
+  fill: currentColor;
+  overflow: hidden;
+}
+
